[gd_scene load_steps=4 format=2]

[ext_resource path="res://GamePad/SideControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Background.png" type="Texture" id=2]
[ext_resource path="res://GamePad/GamePad.gd" type="Script" id=3]

[node name="GamePad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="LeftSideControl" parent="." instance=ExtResource( 1 )]

[node name="RightSideControl" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -900.0
margin_right = -150.0
side = "right"

[connection signal="button_pressed" from="LeftSideControl" to="." method="_on_button_pressed"]
[connection signal="button_released" from="LeftSideControl" to="." method="_on_button_released"]
[connection signal="input_direction_calculated" from="LeftSideControl" to="." method="_on_direction_calculated"]
[connection signal="button_pressed" from="RightSideControl" to="." method="_on_button_pressed"]
[connection signal="button_released" from="RightSideControl" to="." method="_on_button_released"]
[connection signal="input_direction_calculated" from="RightSideControl" to="." method="_on_direction_calculated"]
